// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetReady renders get ready content 1`] = `
<Fragment>
  <Title>
    Get ready to apply
  </Title>
  <Alert
    className="margin-bottom-3"
    heading="Only some people can apply online for now"
    neutral={true}
    state="info"
  >
    <Heading
      className="margin-top-3"
      level="3"
    >
      <SvgIconLaptop
        className="margin-right-1 text-secondary text-middle margin-top-neg-05"
        fill="currentColor"
        height={20}
        width={20}
      />
      Apply online
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.getReady.alertOnline"
      tOptions={
        Object {
          "context": undefined,
        }
      }
    />
    <Heading
      level="3"
    >
      <SvgIconPhone
        className="margin-right-1 text-secondary text-middle margin-top-neg-05"
        fill="currentColor"
        height={20}
        width={20}
      />
      Apply by phone
    </Heading>
    <Trans
      components={
        Object {
          "benefits-timeline-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-timeline#december-2,-2020-"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.getReady.alertPhone"
    />
  </Alert>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <Icon
        className="margin-right-1 text-secondary text-middle margin-top-neg-05"
        name="comment"
      />
      1. Tell your employer that you need to take paid leave
    </Heading>
    <Trans
      i18nKey="pages.getReady.stepOne"
    />
    <Heading
      level="2"
    >
      <Icon
        className="margin-right-1 text-secondary text-middle margin-top-neg-05"
        name="upload_file"
      />
      2. Get documentation that supports your leave request
    </Heading>
    <Trans
      components={
        Object {
          "which-paid-leave-link": <a
            href="https://www.mass.gov/which-paid-leave"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.getReady.stepTwoWhichPaidLeaveBody"
    />
    <Heading
      level="3"
    >
      Medical leave for your own serious health condition
    </Heading>
    <Trans
      components={
        Object {
          "healthcare-provider-form-link": <a
            href="https://www.mass.gov/medical-leave-form"
          />,
        }
      }
      i18nKey="pages.getReady.stepTwoMedicalLeaveBody"
    />
    <Heading
      level="3"
    >
      Family leave
    </Heading>
    <Heading
      level="4"
    >
      To bond with a child
    </Heading>
    <Trans
      i18nKey="pages.getReady.stepTwoBondingLeaveBody"
    />
    <Heading
      level="2"
    >
      <Icon
        className="margin-right-1 text-secondary text-middle margin-top-neg-05"
        name="edit"
      />
      3. Apply
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344-7365"
          />,
          "li": <li />,
          "medical-bonding-link": <a
            href="https://www.mass.gov/pfml-medical-bonding"
          />,
          "tax-liability-link": <a
            href="https://www.mass.gov/pfml-tax-liability"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.getReady.stepThree"
    />
    <ButtonLink
      className="margin-top-3 margin-bottom-8"
      href="/applications/start"
    >
      Create an application
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`GetReady renders get ready content 2`] = `
Array [
  <p
    key="p-0"
  >
    If you are currently employed in Massachusetts but not self-employed, you can apply online or by phone for the following types of paid leave:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Medical leave due to your own illness, injury, or pregnancy
    </li>
    <li
      key="1"
    >
      Family leave to bond with your child after birth, adoption, or foster placement — whether you are applying before or after the child arrives
    </li>
  </ul>,
]
`;

exports[`GetReady renders get ready content 3`] = `
Array [
  <p
    key="p-0"
  >
    Apply by calling the Department of Family and Medical Leave Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if 
    <strong
      key="strong-3"
    >
      any
    </strong>
     of the following are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You are self-employed or unemployed and you are applying for paid leave
    </li>
    <li
      key="1"
    >
      You need paid family leave to care for a family member who serves in the armed forces
    </li>
    <li
      key="2"
    >
      You need paid family leave to manage family affairs when a family member is on active duty in the armed forces
    </li>
  </ul>,
]
`;

exports[`GetReady renders get ready content 4`] = `
Array [
  <p
    key="p-0"
  >
    If you can, tell your employer at least 30 days before your leave begins. If you need to take leave right away, tell your employer as soon as possible.
  </p>,
  <p
    key="p-1"
  >
    Once you tell your employer, you have the right to apply and your job is protected. Make a note of when you notified your employer. You will need to provide this date in your leave application.
  </p>,
]
`;

exports[`GetReady renders get ready content 5`] = `
<p
  key="p-0"
>
  If you’re not sure what kind of leave to apply for, 
  <a
    href="https://www.mass.gov/which-paid-leave"
    key="1"
    rel="noopener"
    target="_blank"
  >
    learn more about Paid Family and Medical Leave
  </a>
  .
</p>
`;

exports[`GetReady renders get ready content 6`] = `
<p
  key="p-0"
>
  Your health care provider must complete the 
  <a
    href="https://www.mass.gov/medical-leave-form"
    key="1"
  >
    Certification of Your Serious Health Condition
  </a>
  .
</p>
`;

exports[`GetReady renders get ready content 7`] = `
Array [
  <p
    key="p-0"
  >
    For family leave to bond with your child after birth, foster placement, or adoption you need a document that confirms your child’s date of birth or placement.
  </p>,
  <p
    key="p-1"
  >
    You can apply before your child is born or arrives in your home. You will need to provide proof of birth or placement for your application to be approved.
  </p>,
]
`;

exports[`GetReady renders get ready content 8`] = `
Array [
  <p
    key="p-0"
  >
    Applying takes around 15 minutes. Your information will save as you go, so you can finish your application later if you need to.
  </p>,
  <p
    key="p-1"
  >
    If you give birth and plan to take both pregnancy-related medical leave and family leave to bond with your newborn, you should apply for medical leave first. Family leave to bond with your child can be 
    <a
      href="https://www.mass.gov/pfml-medical-bonding"
      key="1"
    >
      easily added to your claim
    </a>
     by calling our Contact Center at 
    <a
      href="tel:(833) 344-7365"
      key="3"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
  <p
    key="p-2"
  >
    You need to create multiple leave applications if you are:
  </p>,
  <ul
    className="usa-list"
    key="3"
  >
    <li
      key="0"
    >
      Taking leave from multiple employers.
    </li>
    <li
      key="1"
    >
      Taking time off in uneven blocks of time (intermittent leave), 
      <strong
        key="strong-1"
      >
        and
      </strong>
       taking time off completely or on a reduced schedule. You’ll need a separate application for the intermittent leave.
    </li>
  </ul>,
  <p
    key="p-4"
  >
    PFML benefits are subject to reporting for tax purposes and may be subject to taxation. Withholding is not currently supported through the PFML program. Learn more about the 
    <a
      href="https://www.mass.gov/pfml-tax-liability"
      key="1"
    >
      possible tax implications
    </a>
     of your paid leave benefits.
  </p>,
]
`;
